# paddle-example

./: .gitignore  Dockerfile  action.yml  paddle.yaml
.github/actions/: action.yml
.github/workflows/: paddle-test.yml
dependency/: paddle.yaml  setup.cfg
root/: paddle.yaml  setup.cfg
root/src/paddle_example_root/: main.py
