[metadata]
name = paddle_example_root
version = 0.0.1
author = Oleg Smirnov
author_email = oleg.smirnov@jetbrains.com
description = Description is not provided.
url = jetbrains.com


[options]
package_dir = 
	 = src
packages = 
	find:
install_requires = 
	paddle_example_dependency==0.0.1


[options.packages.find]
where = src